[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/SplitScreen.gd" type="Script" id=1]
[ext_resource path="res://GFX/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Tracks/Track1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Camera.gd" type="Script" id=4]
[ext_resource path="res://scenes/WorldEnvironment.tscn" type="PackedScene" id=5]

[node name="SplitScreen" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )

[node name="Splitter" type="GridContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
columns = 2
_sections_unfolded = [ "Theme", "custom_constants" ]

[node name="ViewportContainer1" type="ViewportContainer" parent="Splitter"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 510.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="Splitter/ViewportContainer1"]
arvr = false
size = Vector2( 510, 298 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Audio Listener" ]

[node name="Track1" parent="Splitter/ViewportContainer1/Viewport" instance=ExtResource( 3 )]

[node name="Track" parent="Splitter/ViewportContainer1/Viewport/Track1" index="0"]
data = {
"cells": PoolIntArray( 1, 0, 536870917, 3, 0, 1074397190, 5, 0, 655366, 6, 0, 1074397190, 12, 0, 655364, 65533, 0, 5, 65535, 0, 5, 65528, 1, 655368, 1, 2, 1441794, 3, 2, 1441794, 4, 2, 1441794, 18, 2, 1048581, 20, 2, 655362, 22, 2, 1441797, 65531, 2, 1074790402, 65533, 2, 1074790402, 65535, 2, 1074397184, 7, 3, 1074397194, 1, 4, 1074397189, 3, 4, 655366, 4, 4, 655366, 18, 4, 1048581, 20, 4, 1075183617, 22, 4, 1441797, 65533, 4, 655365, 65535, 4, 1074397189, 11, 5, 8, 18, 6, 1074790409, 20, 6, 1441801, 13, 9, 655368, 17, 9, 1441800, 1, 65520, 1048578, 65527, 65520, 1074790409, 65529, 65520, 1048578, 65531, 65520, 1074790402, 65533, 65520, 1048578, 65535, 65520, 1074790402, 4, 65521, 8, 1, 65522, 1073741833, 65535, 65522, 1441794, 65528, 65523, 1048579, 65532, 65523, 1074790408, 1, 65524, 2, 5, 65524, 2, 1, 65526, 1073741826, 5, 65526, 2, 65529, 65526, 1074397186, 65529, 65527, 1048583, 65532, 65527, 1075183619, 1, 65528, 1073741826, 5, 65528, 1073741826, 65529, 65528, 655362, 1, 65530, 2, 65533, 65530, 1074790407, 4, 65531, 1441800, 65528, 65531, 1441802, 1, 65532, 1074397193, 65534, 65533, 655368, 1, 65534, 1048578, 3, 65534, 1074790402, 4, 65534, 1074790402, 6, 65534, 1074790402, 12, 65534, 1074397185, 65527, 65534, 1074790401, 9, 65535, 1074397195, 15, 65535, 655373, 19, 65535, 8 )
}

[node name="Terrain" parent="Splitter/ViewportContainer1/Viewport/Track1" index="1"]
data = {
"cells": PoolIntArray( 65531, 0, 1074397207, 7, 65518, 1074790406, 9, 65518, 1073741839, 11, 65518, 1073741839, 12, 65518, 1073741839, 13, 65518, 1073741839, 14, 65518, 1073741839, 16, 65518, 15, 17, 65518, 15, 18, 65518, 15, 19, 65518, 15, 20, 65518, 15, 9, 65519, 1073741839, 14, 65519, 1073741839, 15, 65519, 1073741839, 16, 65519, 1073741839, 17, 65519, 1073741839, 18, 65519, 1073741839, 19, 65519, 1073741839, 20, 65519, 1073741839, 7, 65520, 1074790407, 10, 65520, 1073741839, 11, 65520, 1073741839, 12, 65520, 1073741839, 13, 65520, 1073741839, 14, 65520, 1073741839, 15, 65520, 1073741839, 18, 65520, 1073741839, 19, 65520, 1073741839, 20, 65520, 1073741839, 7, 65521, 1074790407, 9, 65521, 1073741839, 11, 65521, 1073741839, 12, 65521, 1073741839, 15, 65521, 1073741839, 16, 65521, 1073741839, 18, 65521, 1073741839, 19, 65521, 1073741839, 20, 65521, 1073741839, 9, 65522, 1073741839, 11, 65522, 1073741839, 12, 65522, 1073741839, 13, 65522, 1073741839, 14, 65522, 1073741839, 16, 65522, 1073741839, 17, 65522, 1073741839, 19, 65522, 1073741839, 20, 65522, 536870927, 7, 65523, 1074790407, 9, 65523, 15, 10, 65523, 1073741839, 11, 65523, 1073741839, 12, 65523, 1073741839, 13, 65523, 1073741839, 14, 65523, 1073741839, 15, 65523, 1073741839, 17, 65523, 1610612751, 18, 65523, 15, 19, 65523, 1610612751, 3, 65524, 1073741837, 9, 65524, 1073741839, 10, 65524, 1073741839, 11, 65524, 15, 12, 65524, 15, 13, 65524, 1073741839, 14, 65524, 15, 15, 65524, 1073741839, 16, 65524, 1073741839, 18, 65524, 1073741839, 19, 65524, 1073741839, 20, 65524, 1073741839, 65535, 65524, 1073741839, 7, 65525, 1048583, 9, 65525, 15, 11, 65525, 1073741839, 12, 65525, 1073741839, 14, 65525, 15, 15, 65525, 1073741839, 16, 65525, 1073741839, 19, 65525, 15, 3, 65526, 1073741837, 9, 65526, 1073741839, 11, 65526, 1073741839, 12, 65526, 1073741839, 13, 65526, 1073741839, 16, 65526, 1610612751, 17, 65526, 15, 19, 65526, 15, 20, 65526, 1073741839, 65527, 65526, 1074790428, 65535, 65526, 1073741839, 7, 65527, 1048583, 9, 65527, 15, 11, 65527, 15, 13, 65527, 15, 14, 65527, 15, 15, 65527, 15, 16, 65527, 15, 17, 65527, 15, 20, 65527, 15, 3, 65528, 13, 7, 65528, 1074790407, 9, 65528, 15, 16, 65528, 15, 17, 65528, 1073741839, 18, 65528, 1073741839, 19, 65528, 15, 20, 65528, 1073741839, 65527, 65528, 28, 65535, 65528, 1073741839, 9, 65529, 15, 10, 65529, 15, 11, 65529, 15, 12, 65529, 15, 13, 65529, 15, 14, 65529, 15, 7, 65530, 1048583, 9, 65530, 15, 10, 65530, 1073741839, 11, 65530, 1073741839, 12, 65530, 1073741839, 13, 65530, 1073741839, 14, 65530, 1073741839, 15, 65530, 1073741839, 16, 65530, 1073741839, 17, 65530, 1073741839, 18, 65530, 1073741839, 19, 65530, 1073741839, 20, 65530, 1073741839, 65531, 65530, 1074397257, 65535, 65530, 1073741839, 7, 65532, 1074790405, 9, 65532, 1074397191, 11, 65532, 1074397191, 13, 65532, 1074397191, 15, 65532, 1074397191, 17, 65532, 537526279, 19, 65532, 1074397191, 20, 65532, 1074397191, 65531, 65532, 1074397207, 65529, 65534, 1075183689, 65531, 65534, 1074397207 )
}

[node name="DirectionalLight" parent="Splitter/ViewportContainer1/Viewport/Track1" index="2"]
light_cull_mask = -1

[node name="Camera1" type="Camera" parent="Splitter/ViewportContainer1/Viewport"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 1.30137, 2.5, 11.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 2
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
follow_this_path = NodePath("../../../../Splitter/ViewportContainer1/Viewport/Track1/Cart")
target_distance = 2.0
target_height = 1.0

[node name="WorldEnvironment" parent="Splitter/ViewportContainer1/Viewport/Camera1" instance=ExtResource( 5 )]

[node name="Name1" type="Label" parent="Splitter/ViewportContainer1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 40.0
margin_right = 112.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player 1
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="ViewportContainer2" type="ViewportContainer" parent="Splitter"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 298.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="Splitter/ViewportContainer2"]
arvr = false
size = Vector2( 510, 298 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Audio Listener" ]

[node name="Camera2" type="Camera" parent="Splitter/ViewportContainer2/Viewport"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 1.30137, 2.5, 8.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 2
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
follow_this_path = NodePath("../../../../Splitter/ViewportContainer1/Viewport/Track1/Cart2")
target_distance = 2.0
target_height = 1.0

[node name="Name2" type="Label" parent="Splitter/ViewportContainer2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 394.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -247.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Player 2"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="ViewportContainer3" type="ViewportContainer" parent="Splitter"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 302.0
margin_right = 510.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="Splitter/ViewportContainer3"]
arvr = false
size = Vector2( 510, 298 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Audio Listener" ]

[node name="Camera3" type="Camera" parent="Splitter/ViewportContainer3/Viewport"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 1.30137, 2.5, 9.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 2
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
follow_this_path = NodePath("../../../ViewportContainer1/Viewport/Track1/Cart3")
target_distance = 2.0
target_height = 1.0

[node name="Name3" type="Label" parent="Splitter/ViewportContainer3"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -51.0
margin_right = 116.0
margin_bottom = -40.0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 12
text = "Player 3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Size Flags" ]

[node name="ViewportContainer4" type="ViewportContainer" parent="Splitter"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_top = 302.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="Splitter/ViewportContainer4"]
arvr = false
size = Vector2( 510, 298 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Audio Listener" ]

[node name="Camera4" type="Camera" parent="Splitter/ViewportContainer4/Viewport"]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 1.30137, 2.5, 10.5 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 2
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
follow_this_path = NodePath("../../../ViewportContainer1/Viewport/Track1/Cart4")
target_distance = 2.0
target_height = 1.0

[node name="Name4" type="Label" parent="Splitter/ViewportContainer4"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -51.0
margin_right = -40.0
margin_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Player 4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin" ]

[connection signal="tree_exiting" from="Splitter/ViewportContainer1/Viewport/Track1/Cart2" to="Splitter/ViewportContainer2/Viewport/Camera2" method="cart_despawn"]
[connection signal="tree_exiting" from="Splitter/ViewportContainer1/Viewport/Track1/Cart3" to="Splitter/ViewportContainer3/Viewport/Camera3" method="cart_despawn"]
[connection signal="tree_exiting" from="Splitter/ViewportContainer1/Viewport/Track1/Cart4" to="Splitter/ViewportContainer4/Viewport/Camera4" method="cart_despawn"]

[editable path="Splitter/ViewportContainer1/Viewport/Track1"]
